WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172731
Fix compilation with !ENABLE(SVG_FONTS)
https://bugs.webkit.org/show_bug.cgi?id=172731
Summary
Fix compilation with !ENABLE(SVG_FONTS)
Konstantin Tokarev
Reported
2017-05-30 14:28:30 PDT
Fix compilation with !ENABLE(SVG_FONTS)
Attachments
Patch
(1.86 KB, patch)
2017-05-30 14:29 PDT
,
Konstantin Tokarev
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Konstantin Tokarev
Comment 1
2017-05-30 14:29:45 PDT
Created
attachment 311542
[details]
Patch
Myles C. Maxfield
Comment 2
2017-05-30 14:53:55 PDT
I have been thinking of enabling this flag for everyone. Is the fact that it is disabled in your configuration intentional?
Konstantin Tokarev
Comment 3
2017-05-30 15:00:19 PDT
AFAIK, SVG fonts is not a widely used feature, and content that uses it usually provides alternatives as WOFF(2) or TTF. That's why I believe it's acceptable to disable it on some embedded systems in order to reduce binary size. Are SVG fonts an essential part of Web platform these days?
WebKit Commit Bot
Comment 4
2017-06-06 12:51:07 PDT
Comment on
attachment 311542
[details]
Patch Clearing flags on attachment: 311542 Committed
r217849
: <
http://trac.webkit.org/changeset/217849
>
WebKit Commit Bot
Comment 5
2017-06-06 12:51:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug