Fix compilation with !ENABLE(SVG_FONTS) https://bugs.webkit.org/show_bug.cgi?id=172731

Reviewed by Darin Adler.

No new tests needed.

* css/CSSFontFaceSource.cpp:
(WebCore::CSSFontFaceSource::load):


Canonical link: https://commits.webkit.org/189874@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217849 268f45cc-cd09-0410-ab3c-d52691b4dbfc